# BaseTruth

./: .antigravityrules  .copilotignore  .cursorrules  .dockerignore  .gitignore  .semgrep.yml  Dockerfile  README.md  build.py  check_exc.py  check_exc_mw.py  check_libs.py  check_routes.py  check_sansio.py  check_ws.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  start.bat  start.py  start.spec  stop.py  trace_ws.py  ws_test_server.py
.github/: copilot-instructions.md
.github/workflows/: semgrep.yml
.streamlit/: config.toml
data/mortgage_docs/: FRAUD_CASES_CATALOGUE.md  labels.csv  metadata.json
docs/: ARCHITECTURE.md  DATABASE.md  FUNCTIONALITY.md  IDENTITY_VERIFICATION.md  Mortgage_Fraud.md  PRODUCT_VISION.md  ROADMAP.md  TOOLING.md  TRACKER.md  USAGE_GUIDE.md  new_features.txt  to_be_done_later.txt
scripts/: _fix_nav.py  debug_arithmetic_fp.py  debug_case050.py  debug_fraud_check.py  debug_keyfields.py  download_public_docs.py  generate_fraud_cases.py  generate_mortgage_docs.py  generate_synthetic_documents.py  run_semgrep.py  verify_cases_050_055.py
src/basetruth/: __init__.py  api.py  cli.py  datasources.py  db.py  logger.py  models.py  service.py  store.py
src/basetruth/analysis/: __init__.py  identity_checks.py  image_forensics.py  payslip.py  preprocess.py  structured.py  tamper.py  upload_authenticity.py  validators.py
src/basetruth/analysis/packs/: __init__.py  banking.py  base.py  compliance.py  healthcare.py  insurance.py  invoice.py  mortgage.py  payments.py  payroll.py
src/basetruth/integrations/: __init__.py  gemma_vlm.py  liteparse.py  ollama.py  pdf.py
src/basetruth/kyc/: __init__.py  liveness.py  session.py
src/basetruth/reporting/: __init__.py  markdown.py  pdf.py
src/basetruth/ui/: __init__.py  app.py  components.py  theme.py
src/basetruth/ui/pages/: __init__.py  bulk.py  cases.py  dashboard.py  database.py  datasources.py  gemma_chat.py  identity.py  layered_analysis.py  logs.py  records.py  reports.py  scan.py  settings.py  video_kyc.py
src/basetruth/vision/: face.py  model_registry.py  video_kyc.py
tests/: test_cases.py  test_datasources.py  test_identity_checks.py  test_kyc_ws.py  test_layered_analysis_pdf.py  test_mortgage.py  test_ollama.py  test_payslip_compare.py  test_service.py  test_structured.py  test_tamper.py  test_validators.py
