[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basetruth"
version = "0.1.0"
description = "Document integrity and fraud detection pipeline with structured summaries and explainable reports."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Hrishikesh Maluskar" }
]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.2.0", "pymupdf>=1.24.0"]
ocr = [
  "pymupdf>=1.24.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "ocrmypdf>=16.0.0",
]
forensics = [
  "pikepdf>=8.0.0",
  "pdfplumber>=0.11.0",
  "imagehash>=4.3.0",
  "exifread>=3.0.0",
  "pyexiftool>=0.5.6",
  "cryptography>=43.0.0",
  "opencv-python>=4.10.0",
  "scipy>=1.14.0",
]
ml = [
  "scikit-learn>=1.5.0",
  "faiss-cpu>=1.9.0",
]
ui = ["streamlit>=1.42.0", "pandas>=2.2.0"]
api = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0", "pydantic>=2.0.0", "python-multipart>=0.0.9"]
connectors = [
  "boto3>=1.37.0",
  "requests>=2.32.0",
  "google-api-python-client>=2.165.0",
  "google-auth>=2.39.0",
]
launcher = ["pyinstaller>=6.13.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
basetruth = "basetruth.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# test_kyc_ws.py is a standalone integration script that requires a live server.
# Exclude it from the regular pytest run; run manually: python tests/test_kyc_ws.py
addopts = "--ignore=tests/test_kyc_ws.py"

[tool.setuptools.packages.find]
where = ["src"]
